--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<li><a href="#"><span> </span>Người dùng có thể xem thông tin các cuốn sách.</a></li>
 				<li><a href="#"><span> </span>Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</a></li>
 			</ul>
-			<ul class="big-btns">
-				<!-- <li><a class="iapps" href=""> </a></li> -->
-				<!-- <li><a class="gapps" href=""> </a></li> -->
-				<div class="clear"> </div>
+			<p><b>Thành viên nhóm:</b></p>
+			<ul class="fea-list">
+				<li><a href="#"><span> </span>Trần Văn Sinh</a></li>
+				<li><a href="#"><span> </span>Lê Văn Linh</a></li>
 			</ul>
 		</div>
 		<div class="clear"> </div>
