Update link repository of project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<img src="images/logo-left.png" alt="logogym" width="400px" height="400px"/>
 		</div>
 		<div class="header-right">
-			<a class="logo" href="#"><img src="images/logo.png" title="App" /></a>
+			<a class="logo" href="https://github.com/tvsinh/onechamp"><img src="images/logo.png" title="App" /></a>
 			<p><b>Mô tả các chức năng:</b></p>
 			<ul class="fea-list">
 				<li><a href="#"><span> </span>Người dùng có thể tìm kiếm sách.</a></li>
@@ -39,7 +39,7 @@
 			<p><b>Thành viên nhóm:</b></p>
 			<ul class="fea-list">
 				<li><a href="#"><span> </span>Trần Văn Sinh</a></li>
-				<li><a href="#"><span> </span>Lê Văn Linh</a></li>
+				<li><a href="#"><span> </span>Lê Văn Linh - 17CNTT2</a></li>
 			</ul>
 		</div>
 		<div class="clear"> </div>
