--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li><a href="index.html">One Champ</a></li>
 		</ul>
 	</nav>
-
+	<! -- End Nav -->
 	<!---start-header---->
 	<div class="header">
 		<div class="header-left">
@@ -28,7 +28,7 @@
 			<img src="images/logo-left.png" alt="logogym" width="400px" height="400px"/>
 		</div>
 		<div class="header-right">
-			<a class="logo" href="#"><img src="images/logo.png" title="App" /></a>
+			<a class="logo" href="https://www.facebook.com/Kii.Kii.007"><img src="images/logo.png" title="Logo_finder_app" /></a>
 			<p><b>Mô tả các chức năng:</b></p>
 			<ul class="fea-list">
 				<li><a href="#"><span> </span>Người dùng có thể tìm kiếm sách.</a></li>
@@ -38,8 +38,8 @@
 			</ul>
 			<p><b>Thành viên nhóm:</b></p>
 			<ul class="fea-list">
-				<li><a href="#"><span> </span>Trần Văn Sinh</a></li>
-				<li><a href="#"><span> </span>Lê Văn Linh</a></li>
+				<li><a href="https://www.facebook.com/Kii.Kii.007"><span> </span>Trần Văn Sinh - 16CNTT01</a></li>
+				<li><a href="https://www.facebook.com/lin.le.92102"><span> </span>Lê Văn Linh - 17CNTT02</a></li>
 			</ul>
 		</div>
 		<div class="clear"> </div>
