--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			</ul>
 			<p><b>Thành viên nhóm:</b></p>
 			<ul class="fea-list">
-				<li><a href="https://www.facebook.com/Kii.Kii.007"><span> </span>Trần Văn Sinh - 16CNTT01</a></li>
-				<li><a href="https://www.facebook.com/lin.le.92102"><span> </span>Lê Văn Linh - 17CNTT02</a></li>
+				<li><a href="#"><span> </span>Trần Văn Sinh - 16CNTT01</a></li>
+				<li><a href="#"><span> </span>Lê Văn Linh - 17CNTT02</a></li>
 			</ul>
 		</div>
 		<div class="clear"> </div>
