edit link git finderbook

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<img src="images/logo-left.png" alt="logogym" width="400px" height="400px"/>
 		</div>
 		<div class="header-right">
-			<a class="logo" href="https://gitlinhleqtgh.github.io/project-finderbook/"><img src="images/logo.png" title="App" /></a>
+			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook"><img src="images/logo.png" title="App" /></a>
 			<p><b>Mô tả các chức năng:</b></p>
 			<ul class="fea-list">
 				<li><a href="#"><span> </span>Người dùng có thể tìm kiếm sách.</a></li>
