describe the function down

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<div class="header">
 		<div class="header-left">
 			<!-- <span> </span> -->
-			<img src="images/logo-left.png" alt="logogym" width="400px" height="400px"/>
+			<img src="images/logo-left.png" alt="logo-book" width="400px" height="400px"/>
 		</div>
 		<div class="header-right">
-			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook"><img src="images/logo.png" title="App" /></a>
+			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook"><img src="images/logo.png" title="finderbook-repo" /></a>
 			<p><b>Mô tả các chức năng:</b></p>
 			<ul class="fea-list">
-				<li><a href="#"><span> </span>Người dùng có thể tìm kiếm sách.</a></li>
+				<li><a href="#"><span> </span>Người dùng có thể nhập thông tin để tìm kiếm sách.</a></li>
 				<li><a href="#"><span> </span>Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</a></li>
 				<li><a href="#"><span> </span>Người dùng có thể xem thông tin các cuốn sách.</a></li>
 				<li><a href="#"><span> </span>Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</a></li>
@@ -55,7 +55,7 @@
 						<span> </span>
 					</div>
 					<div class="top-grid-right">
-						<h2>___________________</h2>
+						<h2>▷ Người dùng có thể nhập thông tin để tìm kiếm sách.</h2>
 						<p>________________________
 							_________________________</p>
 					</div>
@@ -66,7 +66,7 @@
 						<span> </span>
 					</div>
 					<div class="top-grid-right">
-						<h2>___________________</h2>
+						<h2>▷ Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</h2>
 						<p>________________________
 							________________________</p>
 					</div>
@@ -77,7 +77,7 @@
 						<span> </span>
 					</div>
 					<div class="top-grid-right">
-						<h2>___________________</h2>
+						<h2>▷ Người dùng có thể xem thông tin các cuốn sách.</h2>
 						<p>________________________
 							________________________</p>
 					</div>
@@ -88,7 +88,7 @@
 						<span> </span>
 					</div>
 					<div class="top-grid-right">
-						<h2>___________________</h2>
+						<h2>▷ Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</h2>
 						<p>________________________
 							________________________</p>
 					</div>
