link to repo img logo

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 	<div class="header">
 		<div class="header-left">
 			<!-- <span> </span> -->
-			<img src="images/logo-left.png" alt="logo-book" width="400px" height="400px"/>
+			<a href="https://github.com/tvsinh/onechamp" target="_blank"><img src="images/logo-left.png" alt="logo-book" width="400px" height="400px"/></a>
 		</div>
 		<div class="header-right">
-			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook"><img src="images/logo.png" title="finderbook-repo" /></a>
+			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook" target="_blank"><img src="images/logo.png" title="finderbook-repo" /></a>
 			<p><b>Mô tả các chức năng:</b></p>
 			<ul class="fea-list">
 				<li><a href="#"><span> </span>Người dùng có thể nhập thông tin để tìm kiếm sách.</a></li>
