--- a/index.html
+++ b/index.html
@@ -21,102 +21,109 @@
 		</ul>
 	</nav>
 	<! -- End Nav -->
-	<!---start-header---->
-	<div class="header">
-		<div class="header-left">
-			<!-- <span> </span> -->
-			<a href="https://github.com/tvsinh/onechamp" target="_blank"><img src="images/logo-left.png" alt="logo-book" width="350px" height="350px"/></a>
-		</div>
-		<div class="header-right">
-			<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook" target="_blank"><img src="images/logo.png" title="finderbook-repo" /></a>
-			<p><b>Mô tả các chức năng:</b></p>
-			<ul class="fea-list">
-				<li><a href="#"><span> </span>Người dùng có thể nhập thông tin để tìm kiếm sách.</a></li>
-				<li><a href="#"><span> </span>Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</a></li>
-				<li><a href="#"><span> </span>Người dùng có thể xem thông tin các cuốn sách.</a></li>
-				<li><a href="#"><span> </span>Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</a></li>
-			</ul>
-			<p><b>Thành viên nhóm:</b></p>
-			<ul class="fea-list">
-				<li><a href="#"><span> </span>Trần Văn Sinh - 16CNTT01</a></li>
-				<li><a href="#"><span> </span>Lê Văn Linh - 17CNTT02</a></li>
-			</ul>
-		</div>
-		<div class="clear"> </div>
-	</div>
-	<!---End-header---->
-	<!--- start-wrap---->	
-	<div class="wrap">
-		<!---start-content---->
-		<div class="content">
-			<div class="content-top-grids">
-				<div class="top-grid">
-					<div class="top-grid-left icon1">
-						<span> </span>
-					</div>
-					<div class="top-grid-right">
-						<h2>▷ Người dùng có thể nhập thông tin để tìm kiếm sách.</h2>
-						<p></p>
-					</div>
-					<div class="clear"> </div>
-				</div>
-				<div class="top-grid">
-					<div class="top-grid-left icon2">
-						<span> </span>
-					</div>
-					<div class="top-grid-right">
-						<h2>▷ Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</h2>
-						<p></p>
-					</div>
-					<div class="clear"> </div>
-				</div>
-				<div class="top-grid">
-					<div class="top-grid-left icon3">
-						<span> </span>
-					</div>
-					<div class="top-grid-right">
-						<h2>▷ Người dùng có thể xem thông tin các cuốn sách.</h2>
-						<p></p>
-					</div>
-					<div class="clear"> </div>
-				</div>
-				<div class="top-grid">
-					<div class="top-grid-left icon4">
-						<span> </span>
-					</div>
-					<div class="top-grid-right">
-						<h2>▷ Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</h2>
-						<p></p>
-					</div>
-					<div class="clear"> </div>
-				</div>
-				<div class="clear"> </div>
+		<!---start-header---->
+		<div class="header">
+			<div class="header-left">
+				<!-- <span> </span> -->
+				<a href="https://github.com/tvsinh/onechamp" target="_blank"><img src="images/logo-left.png" alt="logo-book"
+						width="350px" height="350px" /></a>
 			</div>
-			
-		
-		<!---start-stay-with----->
-		<div class="stay-with">
-			<div class="stay-with-head">
-				<hr>
-				<hr>
-				<h3>Contact us</h3>
-				<p>You can contact us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">One.Champ@gmail.com</a></p>
-			</div>
-			<div class="social-icons">
-				<ul>
-					<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="Twitter" href="#"> </a></li>
-					<li><a class="face simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="https://www.fb.com/kii.kii.007" target="_blank"> </a></li>
-					<li><a class="linked-in simptip-position-bottom simptip-movable" data-tooltip="Linked-in" href="#"> </a></li>
-					<div class="clear"> </div>
+			<div class="header-right">
+				<a href="images/video.mp4" download="vs.mp4">Down</a>
+				<a class="logo" href="https://github.com/gitlinhleqtgh/project-finderbook" target="_blank"><img
+						src="images/logo.png" title="finderbook-repo" /></a>
+				<p><b>Mô tả các chức năng:</b></p>
+				<ul class="fea-list">
+					<li><a href="#"><span> </span>Người dùng có thể nhập thông tin để tìm kiếm sách.</a></li>
+					<li><a href="#"><span> </span>Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</a>
+					</li>
+					<li><a href="#"><span> </span>Người dùng có thể xem thông tin các cuốn sách.</a></li>
+					<li><a href="#"><span> </span>Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</a></li>
+				</ul>
+				<p><b>Thành viên nhóm:</b></p>
+				<ul class="fea-list">
+					<li><a href="#"><span> </span>Trần Văn Sinh - 16CNTT01</a></li>
+					<li><a href="#"><span> </span>Lê Văn Linh - 17CNTT02</a></li>
 				</ul>
 			</div>
+			<div class="clear"> </div>
 		</div>
-		<!---End-stay-with----->
+		<!---End-header---->
+		<!--- start-wrap---->
+		<div class="wrap">
+			<!---start-content---->
+			<div class="content">
+				<div class="content-top-grids">
+					<div class="top-grid">
+						<div class="top-grid-left icon1">
+							<span> </span>
+						</div>
+						<div class="top-grid-right">
+							<h2>▷ Người dùng có thể nhập thông tin để tìm kiếm sách.</h2>
+							<p></p>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					<div class="top-grid">
+						<div class="top-grid-left icon2">
+							<span> </span>
+						</div>
+						<div class="top-grid-right">
+							<h2>▷ Ứng dụng trả về một mảng sách có dữ liệu tương ứng theo thông tin tìm kiếm.</h2>
+							<p></p>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					<div class="top-grid">
+						<div class="top-grid-left icon3">
+							<span> </span>
+						</div>
+						<div class="top-grid-right">
+							<h2>▷ Người dùng có thể xem thông tin các cuốn sách.</h2>
+							<p></p>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					<div class="top-grid">
+						<div class="top-grid-left icon4">
+							<span> </span>
+						</div>
+						<div class="top-grid-right">
+							<h2>▷ Người dùng có thể tùy chọn tìm sách theo thứ tự ngày xuất bản.</h2>
+							<p></p>
+						</div>
+						<div class="clear"> </div>
+					</div>
+					<div class="clear"> </div>
+				</div>
 
-	</div>
-	<!---End-content---->
-	</div>
-	<!--- //End-wrap---->
+
+				<!---start-stay-with----->
+				<div class="stay-with">
+					<div class="stay-with-head">
+						<hr>
+						<hr>
+						<h3>Contact us</h3>
+						<p>You can contact us at <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+								target="_blank">One.Champ@gmail.com</a></p>
+					</div>
+					<div class="social-icons">
+						<ul>
+							<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="Twitter" href="#"> </a></li>
+							<li><a class="face simptip-position-bottom simptip-movable" data-tooltip="Facebook"
+									href="https://www.fb.com/kii.kii.007" target="_blank"> </a></li>
+							<li><a class="linked-in simptip-position-bottom simptip-movable" data-tooltip="Linked-in" href="#"> </a>
+							</li>
+							<div class="clear"> </div>
+						</ul>
+					</div>
+				</div>
+				<!---End-stay-with----->
+
+			</div>
+			<!---End-content---->
+		</div>
+		<!--- //End-wrap---->
 </body>
 
 </html>
